--- a/data/medtasks.json
+++ b/data/medtasks.json
@@ -44,7 +44,7 @@
         "answer3":"czerwonym",
         "answer4":"żółtym",
         "answer5":"pomarańczowym",
-        "correct": 2,
+        "correct": 3,
         "info":"kolejne info, tym razem 4"
     },
     {
@@ -120,7 +120,7 @@
         "info":"info do pytania 5"
     },
     {
-    "id":"rat",
+        "id":"rat",
         "no":11,
         "task":"11. Początek śmierci klinicznej objawia się:",
         "answer1":"utrarą przytomności, brakiem oddechu, brakiem krążenia krwi",
@@ -137,6 +137,138 @@
         "task":"12. Według definicji klasycznej śmierć jest to:",
         "answer1":"nieodrwracalne ustanie krążenia krwi",
         "answer2":"nieodwracane ustanie czynności mózgu",
+        "answer3":"nieowdracalne ustanie czynności pnia mózgu jako całości",
+        "answer4":"nieodwracalne zaburzenia oddychania",
+        "answer5":"nieodwracalne uszkodzenie kory mózgu",
+        "correct": 0,
+        "info":"info do pytania 5"
+    },
+    {
+        "id":"rat",
+        "no":13,
+        "task":"13. Według definicji nowej śmierć jest to:",
+        "answer1":"nieodwracalne zaburzenia oddychania",
+        "answer2":"nieowdracalne ustanie krążenia krwi",
+        "answer3":"nieodwracalne ustanie czynności mózgu",
+        "answer4":"nieodwracalne ustanie czynności pnia mózgu jako całości",
+        "answer5":"żadna odpowiedź nie jest poprawna",
+        "correct": 2,
+        "info":"info do pytania 5"
+    },
+    {
+        "id":"rat",
+        "no":14,
+        "task":"14. Według definicji nowej zmodyfikowanej śmierć jest to:",
+        "answer1":"nieodwracalne ustanie czynności pnia mózgu jako całości",
+        "answer2":"nieodwracalne ustanie czynności mózgu",
+        "answer3":"nieodwracalne zaburzenia oddychania",
+        "answer4":"nieodwracalne uszkodzenie kory mózgu",
+        "answer5":"nieodwracalne ustanie krążenia krwi",
+        "correct": 0,
+        "info":"info do pytania 5"
+    },
+    {
+        "id":"rat",
+        "no":15,
+        "task":"15. Ostateczne orzeczenie o śmierci pnia mózgu (na podstawie dokumentacji leczniczej i testów potwierdzających śmierć pnia mózgu) podejmuje:",
+        "answer1":"niezależna komisja lekarska złożona z co najmniej 2 lekarzy, których specjalizacje są określone odpowiednim rozporządzeniem ministerialnym",
+        "answer2":"niezależna komisja lekarska złożona z co najmniej 2 lekarzy, których specjalizacje są określone odpowiednim rozporządzeniem ministerialnym oraz prawnika",
+        "answer3":"niezależna komisja lekarska złożona z co najmniej 3 lekarzy, których specjalizacje są określone odpowiednim rozporządzeniem ministerialnym",
+        "answer4":"lekarz prowadzący pacjenta",
+        "answer5":"dyrektor szpitala",
+        "correct": 2,
+        "info":"info do pytania 5"
+    },
+    {
+        "id":"rat",
+        "no":16,
+        "task":"16. Najczęstszą przyczyną wystąpienia OZW jest::",
+        "answer1":"arytmia",
+        "answer2":"zator powietrzny",
+        "answer3":"pęknięcie blaszki miażdzycowej",
+        "answer4":"nadciśnienie tętnicze",
+        "answer5":"brak prawidłowej odpowiedzi",
+        "correct": 2,
+        "info":"info do pytania 5"
+    },
+    {
+        "id":"rat",
+        "no":17,
+        "task":"17. Niedokrwieniem niemym nazywane jest:",
+        "answer1":"obniżenie odcinka ST wraz z bólem",
+        "answer2":"obniżenie odcinka ST bez bólu",
+        "answer3":"uniesienie ST bez bólu",
+        "answer4":"uniesienie ST bez bólu",
+        "answer5":"brak prawidłowej odpowiedzi",
+        "correct": 1,
+        "info":"info do pytania 5"
+    },
+    {
+        "id":"rat",
+        "no":18,
+        "task":"18. 90% zatrzymań krążenia występuje w przebiegu:",
+        "answer1":"migotania komór",
+        "answer2":"asystolii",
+        "answer3":"częstoskurczu komorowym bez tętna",
+        "answer4":"bradykardii",
+        "answer5":"aktywności elektrycznej bez tętna",
+        "correct": 0,
+        "info":"info do pytania 5"
+    },
+    {
+        "id":"rat",
+        "no":19,
+        "task":"19. Azotany działają poprzez wytwrazanie NO, który stymuluje:",
+        "answer1":"wzrost cGMP poprzez cyklazę guanylową",
+        "answer2":"spadek cGMP poprzez cyklazę guanylową ",
+        "answer3":"wzrost cAMP poprzez cyklazę adenylową ",
+        "answer4":"spadek cAMP poprzez cyklazę adenylową",
+        "answer5":"brak prawidłowej odpowiedzi",
+        "correct": 0,
+        "info":"info do pytania 5"
+    },
+    {
+        "id":"rat",
+        "no":20,
+        "task":"20. Charakterystyczną cechą bólu wieńcowego jest jego promieniowanie do wszystkich z wyjątkiem",
+        "answer1":"żuchwy",
+        "answer2":"lewego przedramienia",
+        "answer3":"grzbietu",
+        "answer4":"nadbrzusza",
+        "answer5":"prawej łopatki",
+        "correct": 4,
+        "info":"info do pytania 5"
+    },
+    {
+        "id":"rat",
+        "no":21,
+        "task":"21. Najcięższym mechanizmem zatrzymania serca jest:",
+        "answer1":"migotanie komór",
+        "answer2":"asystolia",
+        "answer3":"częstoskurcz komorowy bez tętna",
+        "answer4":"aktywność elektryczna bez tętna",
+        "answer5":"brak prawidłowej odpowiedzi",
+        "correct": 1,
+        "info":"Asystolia najczęsciej powstaje jako pogorszenie stanu migotania komór."
+    },
+    {
+        "id":"rat",
+        "no":22,
+        "task":"22. W migotaniu komór i częstoskurczu z szerokimi zespołami QRS jedynym skutecznym leczeniem jest:",
+        "answer1":"podanie adrenaliny",
+        "answer2":"podanie amiodaronu",
+        "answer3":"defibrylacja elektryczna",
+        "answer4":"kardiowersja",
+        "answer5":"brak prawidłowej odpowiedzi",
+        "correct": 2,
+        "info":"info do pytania 5"
+    },
+    {
+        "id":"rat",
+        "no":23,
+        "task":"23. Rozpoznanie rozkojarzenia elektrycznego bez tętna możemy postawić gdy:",
+        "answer1":"pomimo obecności krzywej EKG nie stwiedza się tętna obwodowego ani ciśnienia tętniczego",
+        "answer2":"krzywa EKG ma postać prostej linii oraz nie stwierdza się tętna na tętnicy promieniowej",
         "answer3":"nieowdracalne ustanie czynności pnia mózgu jako całości",
         "answer4":"nieodwracalne zaburzenia oddychania",
         "answer5":"nieodwracalne uszkodzenie kory mózgu",
