--- a/data/medtasks.json
+++ b/data/medtasks.json
@@ -2,211 +2,211 @@
     {
         "id":"ratunkowa",
         "no":1,
-        "task":"1. Według systemu segregacji poszkodowanych podczas katastrofy (START) człowieka chodzącego oznacza się kolorem:",
-        "answer1":"zielonym",
-        "answer2":"żółtym",
-        "answer3":"czarnym",
-        "answer4":"czerwonym",
-        "answer5":"pomarańczowym",
-        "correct": 0,
-        "info":"<p>START TRIAGE</p><img src=\"img/pyt1.jpg\">"
+        "task":"1. Głębokość na jaką należy uciskać klatke piersiową u osoby dorosłej wynosi::",
+        "answer1":"3-4 cm",
+        "answer2":"4-5 cm",
+        "answer3":"5-6 cm",
+        "answer4":"6-7 cm",
+        "answer5":"7-8 cm",
+        "correct": 2,
+        "info":""
     },
     {
         "id":"ratunkowa",
         "no":2,
-        "task":"2. Według systemu segregacji poszkodowanych podczas katastrofy (START) człowieka, który nie oddycha po udrożnieniu dróg oddechowych oznacza się kolorem:",
-        "answer1":"czerwonym",
-        "answer2":"żółtym",
-        "answer3":"czarnym",
-        "answer4":"zielonym",
-        "answer5":"pomarańczowym",
+        "task":"2. Z jaką częstością należy uciskać klatkę piersiową podczas resuscytacji?",
+        "answer1":"90-100/min",
+        "answer2":"100-110/min",
+        "answer3":"100-120/min",
+        "answer4":"120-130/min",
+        "answer5":"130-430",
         "correct": 2,
         "info":"info do pytania drugiego"
     },
     {
         "id":"ratunkowa",
         "no":3,
-        "task":"3. Według systemu START osoby oznaczone kolorem czerwonym charakteryzują się:",
-        "answer1":"częstością oddechu >30 lub <10/min",
-        "answer2":"częstością oddechu pomiędzy 10-30/min i powrotem włośniczkowym >2 sekund ",
-        "answer3":"częstością oddechu między 10-30/min, obecnością tętna na t. Promieniowej, ale nie spełnianiem poleceń ratownika",
-        "answer4":"wszytkie wymienione",
-        "answer5":"brak prawidłowej odpowiedzi",
+        "task":"3. Wykonanie defibrylacji w ciągu pierwszych 3-5 minut może skutkować przeżywalnością na poziomie:",
+        "answer1":"2%",
+        "answer2":"10-20% ",
+        "answer3":"25-50%",
+        "answer4":"50-70%",
+        "answer5":"75-100%",
         "correct": 3,
         "info":"info do pytania 3"
     },
     {
         "id":"ratunkowa",
         "no":4,
-        "task":"4. Według systemu segregacji poszkodowanych w czasie katastrofy (START), osoba która oddycha pomiędzy 10-30/min, ma tętno na t. promieniowej, ale nie spełnia poleceń oznaczona jest kolorem:",
-        "answer1":"czarnym",
-        "answer2":"zielonym",
-        "answer3":"czerwonym",
-        "answer4":"żółtym",
-        "answer5":"pomarańczowym",
-        "correct": 3,
+        "task":"4. Głębokość na jaką należy uciskać klatkę piersiową u dzieci wynosi:",
+        "answer1":"1/2 jej głębokości (3 dla niemowląt, 4 dla dzieci)",
+        "answer2":"1/3 jej głębokości (4 dla niemowląt, 5 dla dzieci)",
+        "answer3":"1/4 jej głębokości (3 dla niemowląt, 4 dla dzieci)",
+        "answer4":"1/4 jej głębokości (4 dla niemowląt, 5 dla dzieci)",
+        "answer5":"1/5 jej głębokości (2 dla niemowląt, 3 dla dzieci)",
+        "correct": 1,
         "info":"kolejne info, tym razem 4"
     },
     {
         "id":"ratunkowa",
         "no":5,
-        "task":"5. Obecna skuteczność resuscytacji i reanimacji wynosi około:",
-        "answer1":"2%",
-        "answer2":"4%",
-        "answer3":"6%",
-        "answer4":"8%",
-        "answer5":"10%",
-        "correct": 2,
+        "task":"5. Czas przeznaczony na defibrylację powinien wynosić:",
+        "answer1":"0.5 sekundy",
+        "answer2":"1 sekundę",
+        "answer3":"2 sekundy",
+        "answer4":"3 sekundy",
+        "answer5":"5 sekund",
+        "correct": 1,
         "info":"info do pytania 5"
     },
     {
         "id":"ratunkowa",
         "no":6,
-        "task":"6. Priorytetowym celem resuscytacji jest:",
-        "answer1":"przywrócenie i utrzymanie transportu tlenu do komórek i tkanek",
-        "answer2":"powrót do świadomości",
-        "answer3":"zapobiegnięcie nieodwracalnemu uszkodzeniu mózgu",
-        "answer4":"odprowadzenie dwutlenku węgla z komórek",
-        "answer5":"doprowadzenie glukozy do tkanek",
-        "correct": 0,
+        "task":"6. Metodą na którą zwracają uwagę wytyczne resuscytacji 2015 służącą do potwierdzenia i monitorowania obecności rurki dotchawiczej jest:",
+        "answer1":"ocena saturacji",
+        "answer2":"kapnografia",
+        "answer3":"gazometria",
+        "answer4":"osłuchiwanie pacjneta",
+        "answer5":"USG",
+        "correct": 1,
         "info":"info do pytania 5"
     },
     {
         "id":"ratunkowa",
         "no":7,
-        "task":"7. W skład resuscytacji wchodzi:",
-        "answer1":"oddychanie wspomagane",
-        "answer2":"pośredni masaż serca",
-        "answer3":"elektroterapia",
-        "answer4":"farmakoterapia",
-        "answer5":"wszystkie odpowiedzi są prawidłowe",
+        "task":"7. Do odwracalnych przyczyn zatrzymania krążenia (4H) nie należy:",
+        "answer1":"hypoxia",
+        "answer2":"hypothermia",
+        "answer3":"hyperkalaemia",
+        "answer4":"hypovolemia",
+        "answer5":"haemorhagee",
         "correct": 4,
-        "info":"info do pytania 5"
+        "info":"4H: hipoksja, hipo, hiperkaliemia, hipo, hipertermia, hipowolemia"
     },
     {
         "id":"ratunkowa",
         "no":8,
-        "task":"8. W reanimacji w przeciwieństwie do resuscytacji dąży się do przywrócenia:",
-        "answer1":"czynności układu oddechowego",
-        "answer2":"czynności układu krążenia",
-        "answer3":"czynności układu nerwowego i powrotu świadomości",
-        "answer4":"a+c",
-        "answer5":"brak prawidłowej odpowiedzi",
+        "task":"8. Do odwracalnych przczyn NZK tzw 4T nie należy:",
+        "answer1":"odma prężna",
+        "answer2":"tamponada",
+        "answer3":"hipotemria",
+        "answer4":"zatrucia",
+        "answer5":"zakrzepica",
         "correct": 2,
-        "info":"info do pytania 5"
+        "info":"4T: pneumthorax, tamponade, thrombosis, toxic"
     },
     {
         "id":"ratunkowa",
         "no":9,
-        "task":"9. Najniższą tolerancją na niedotlenienie w naszym organizmie cechuje się :",
-        "answer1":"pień mózgu",
-        "answer2":"kora mózgu ",
-        "answer3":"rdzeń przedłużony",
-        "answer4":"mięsień sercowy",
-        "answer5":"nerki, wątroba",
-        "correct": 1,
+        "task":"9. Podstawowym lekiem w anafilaksji jest:",
+        "answer1":"adrenalina",
+        "answer2":"amiodaron ",
+        "answer3":"hydrokortyzon",
+        "answer4":"0.9% NaCl",
+        "answer5":"węgiel aktywny",
+        "correct": 0,
         "info":"info do pytania 5"
     },
     {
         "id":"ratunkowa",
         "no":10,
-        "task":"10. Czynnkiem decydującym o skuteczności resuscytacji jest czas tak zwanej śmierci klinicznej, czyli czas jaki upływa od:",
-        "answer1":"zatrzymania krążenia do przybycia ratowników medycznych",
-        "answer2":"zatrzymania krążenia do czasu wdrożenia zabiegów resuscytacyjnych",
-        "answer3":"zatrzymania krążenia do rozpoczęcia leczenia farmakologicznego",
-        "answer4":"wypadku do wdrożenia zabiegów resuscytacyjnych",
-        "answer5":"wypadku do rozpoczęcia leczenia na szpitalnym oddziale ratunkowym",
-        "correct": 1,
+        "task":"10. Postępowanie w zatrzymaniu krążenia w migotaniu komór i częstoskurczu komorowym bez tętna (PEA) podczas cewnikowania serca powinno polegać na:",
+        "answer1":"rozpoczęciu uciśnięć klatki piersiowej",
+        "answer2":"jednej defibrylacji, a następnie na uciśnięciach klatki piersiowej",
+        "answer3":"trzech defibrylacjach bezpośrednio po sobie",
+        "answer4":"podaniu dożylnym 1 mg adrenaliny",
+        "answer5":"podaniu dożylnym 300 mg amiodaronu",
+        "correct": 2,
         "info":"info do pytania 5"
     },
     {
         "id":"ratunkowa",
         "no":11,
-        "task":"11. Początek śmierci klinicznej objawia się:",
-        "answer1":"utrarą przytomności, brakiem oddechu, brakiem krążenia krwi",
-        "answer2":"sinicą",
-        "answer3":"drgawkami, sinicą",
-        "answer4":"spadkiem ciśnienia tętniczego, wymiotami",
-        "answer5":"wyłącznie utratą przytomności",
-        "correct": 0,
-        "info":"info do pytania 5"
-    },
-    {
-        "id":"ratunkowa",
-        "no":12,
-        "task":"12. Według definicji klasycznej śmierć jest to:",
-        "answer1":"nieodrwracalne ustanie krążenia krwi",
-        "answer2":"nieodwracane ustanie czynności mózgu",
-        "answer3":"nieowdracalne ustanie czynności pnia mózgu jako całości",
-        "answer4":"nieodwracalne zaburzenia oddychania",
-        "answer5":"nieodwracalne uszkodzenie kory mózgu",
-        "correct": 0,
-        "info":"info do pytania 5"
-    },
-    {
-        "id":"ratunkowa",
-        "no":13,
-        "task":"13. Według definicji nowej śmierć jest to:",
-        "answer1":"nieodwracalne zaburzenia oddychania",
-        "answer2":"nieowdracalne ustanie krążenia krwi",
-        "answer3":"nieodwracalne ustanie czynności mózgu",
-        "answer4":"nieodwracalne ustanie czynności pnia mózgu jako całości",
-        "answer5":"żadna odpowiedź nie jest poprawna",
-        "correct": 2,
-        "info":"info do pytania 5"
-    },
-    {
-        "id":"ratunkowa",
-        "no":14,
-        "task":"14. Według definicji nowej zmodyfikowanej śmierć jest to:",
-        "answer1":"nieodwracalne ustanie czynności pnia mózgu jako całości",
-        "answer2":"nieodwracalne ustanie czynności mózgu",
-        "answer3":"nieodwracalne zaburzenia oddychania",
-        "answer4":"nieodwracalne uszkodzenie kory mózgu",
-        "answer5":"nieodwracalne ustanie krążenia krwi",
-        "correct": 0,
-        "info":"info do pytania 5"
-    },
-    {
-        "id":"ratunkowa",
-        "no":15,
-        "task":"15. Ostateczne orzeczenie o śmierci pnia mózgu (na podstawie dokumentacji leczniczej i testów potwierdzających śmierć pnia mózgu) podejmuje:",
-        "answer1":"niezależna komisja lekarska złożona z co najmniej 2 lekarzy, których specjalizacje są określone odpowiednim rozporządzeniem ministerialnym",
-        "answer2":"niezależna komisja lekarska złożona z co najmniej 2 lekarzy, których specjalizacje są określone odpowiednim rozporządzeniem ministerialnym oraz prawnika",
-        "answer3":"niezależna komisja lekarska złożona z co najmniej 3 lekarzy, których specjalizacje są określone odpowiednim rozporządzeniem ministerialnym",
-        "answer4":"lekarz prowadzący pacjenta",
-        "answer5":"dyrektor szpitala",
-        "correct": 2,
-        "info":"info do pytania 5"
-    },
-    {
-        "id":"ratunkowa",
-        "no":16,
-        "task":"16. Najczęstszą przyczyną wystąpienia OZW jest::",
-        "answer1":"arytmia",
-        "answer2":"zator powietrzny",
-        "answer3":"pęknięcie blaszki miażdzycowej",
-        "answer4":"nadciśnienie tętnicze",
-        "answer5":"brak prawidłowej odpowiedzi",
-        "correct": 2,
-        "info":"info do pytania 5"
-    },
-    {
-        "id":"ratunkowa",
-        "no":17,
-        "task":"17. Niedokrwieniem niemym nazywane jest:",
-        "answer1":"obniżenie odcinka ST wraz z bólem",
-        "answer2":"obniżenie odcinka ST bez bólu",
-        "answer3":"uniesienie ST bez bólu",
-        "answer4":"uniesienie ST bez bólu",
-        "answer5":"brak prawidłowej odpowiedzi",
+        "task":"11. Czas dostarczania wdechu powinien wynosić maksymalnie:",
+        "answer1":"0.5 sekundy",
+        "answer2":"1 sekundę",
+        "answer3":"2 sekundy",
+        "answer4":"3 sekundy",
+        "answer5":"4 sekundy",
         "correct": 1,
         "info":"info do pytania 5"
     },
     {
         "id":"ratunkowa",
+        "no":12,
+        "task":"12. Uciśnięcia klatki piersiowej należy wykonywać w:",
+        "answer1":"górnej części mostka",
+        "answer2":"środkowej części mostka",
+        "answer3":"dolnej części mostka",
+        "answer4":"po prawej stronie mostka",
+        "answer5":"po lewej stronie mostka",
+        "correct": 2,
+        "info":"info do pytania 5"
+    },
+    {
+        "id":"ratunkowa",
+        "no":13,
+        "task":"13. Wstępna wartość energii dla częstoskurczu nadkomorowego wynosi:",
+        "answer1":"1 J/kg",
+        "answer2":"2 J/kg",
+        "answer3":"3 J/kg",
+        "answer4":"4 J/kg",
+        "answer5":"5 J/kg",
+        "correct": 0,
+        "info":"info do pytania 5"
+    },
+    {
+        "id":"ratunkowa",
+        "no":14,
+        "task":"14. Ile wynosi opóźnienie w klemowaniu pępowiny u dzieci:",
+        "answer1":"30 sekund",
+        "answer2":"1 minutę",
+        "answer3":"1.5 minuty",
+        "answer4":"2 minuty",
+        "answer5":"3",
+        "correct": 1,
+        "info":"info do pytania 5"
+    },
+    {
+        "id":"ratunkowa",
+        "no":15,
+        "task":"15. Pacjenci ze STEMI, którzy zostali przetransportowani do szpitala bez możliwości wykonania PCI powinni być przewiezieni do ośrodków kardiologii interwencyjnej jeżeli czas transportu będzie krótszy niż:",
+        "answer1":"20 minut",
+        "answer2":"30 minut",
+        "answer3":"60 minut",
+        "answer4":"100 minut",
+        "answer5":"120 minut",
+        "correct": 4,
+        "info":"Pacjenci, którzy otrzymali leczenie fibrynolityczne powinni być rutynowo przekazywani celem wykonania wczesnej koronarografii (3-24 h po koronarografii). Nie zaleca się wykonywania PCI w czasie krótszym niż 3 h po leczeniu fibrynolitycznym poza przypadkiem, gdy fibrynoliza była nieskuteczna."
+    },
+    {
+        "id":"ratunkowa",
+        "no":16,
+        "task":"16. Najczęstszym mechanizmem zatrzymania krążenia jest",
+        "answer1":"asystolia",
+        "answer2":"migotanie komór",
+        "answer3":"częstoskurcz komorowy bez tętna",
+        "answer4":"aktywność elektryczna bez tętna (PEA)",
+        "answer5":"migotanie przedsionków",
+        "correct": 1,
+        "info":"Gdy ocena rytmu ma miejsce w krótkim czasie od utraty prztomności, szczególnie gdy dotyczy to użycia AED znajdującego się na miejscu zdarzenia, obecność VT stwierdza się w 76% przypadków."
+    },
+    {
+        "id":"ratunkowa",
+        "no":17,
+        "task":"17. Czego nie zawiera łańcuch przeżycia?",
+        "answer1":"zabezpieczenia miejsca wypadku",
+        "answer2":"wczesnego rozpoznania i wezwania pomocy",
+        "answer3":"wczesnego rozpoczęcia RKO",
+        "answer4":"wczesnej defibrylacji",
+        "answer5":"opieki poresuscytacyjnej",
+        "correct": 0,
+        "info":"info do pytania 5"
+    },
+    {
+        "id":"ratunkowa",
         "no":18,
-        "task":"18. 90% zatrzymań krążenia występuje w przebiegu:",
+        "task":"18. Uporządkuj  ",
         "answer1":"migotania komór",
         "answer2":"asystolii",
         "answer3":"częstoskurczu komorowym bez tętna",
